# k3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: k3.h
src/: blender_notes.txt
src/cmn/: error.cpp
src/flac/: foxen-flac.c  foxen-flac.h  readme.txt
src/gfx/: win.cpp
src/gfx/dx12/: dx12win.cpp
src/gfx/win32/: win32joy.cpp  win32win.cpp
src/image/: ddshandler.cpp  image.cpp  jpghandler.cpp  pnghandler.cpp
src/include/: ddshandler.h  dsp.h  fbx.h  jpghandler.h  k3_dsp_blend.h  k3dx12.h  k3internal.h  k3win32.h  midi.h  minimp3.h  pnghandler.h
src/math/: math.cpp
src/sound/: dsp.cpp  midi.cpp
test/: CMakeLists.txt  animtest.cpp  gradtest.cpp  onetri.cpp  raytri.cpp
test/assets/: 144862.flac  Arkade.dds  anim_cyl.fbx  cube2.fbx  cube2e.fbx
test/shaders/: anim3d.hlsl  color.hlsl  simple3d.hlsl  simple_ps.hlsl  simple_ray.hlsl  simple_vs.hlsl
